--- a/src/User.css
+++ b/src/User.css
@@ -1,5 +1,5 @@
 .userContainer{
-    min-height: 87vh;
+    min-height: 89vh;
     display: flex;
 }
 
@@ -16,7 +16,6 @@
     display: flex;
     flex-direction: column;
     gap: 2vh;
-    text-align: center;
 }
 
 .cardTokens{
@@ -56,21 +55,17 @@
 .cardTokens button{
     width: 7vw;
     height: 4vh;
-    background: rgb(14, 40, 90);
-    color: white;
+    background: linear-gradient(90deg, hsl(192, 67%, 46%) ,  hsl(200, 46%, 74%));
+    color: black;
     border-radius: 20px;
 }
 
-.cardTokens button:hover{
-    background: linear-gradient(90deg, hsl(192, 67%, 46%) ,  hsl(200, 46%, 74%));
-}
-
 .userCard{
-    width: 40vw;
-    height: 15vh;
+    width: 30vw;
+    height: 30vh;
     border-radius: 30px;
-    box-shadow: 0.2vh 0.2vh 0.2vh 0.2vh;
-    background-color:rgba(181, 215, 248, 0.555);
+    background-color:#323741;
+    color: white;
     padding: 2vh;
     display: flex;
     flex-direction: column;
@@ -101,11 +96,4 @@
 
 .cardTokens h3{
     font-weight: 300;
-}
-
-
-.userCard:hover{
-    width: 45vw;
-    height: 20vh;
-    transition: width 0.5s, height 0.5s;
 }
