--- a/src/TokenDetails.css
+++ b/src/TokenDetails.css
@@ -1,3 +1,43 @@
 .tokenDetailsContainer{
     min-height: 89vh;
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    align-items: center;
+    padding-top: 5vh;
+}
+
+.tokenDetailsContainer h1{
+    font-weight: 300;
+    border-bottom: 1px solid rgba(196, 196, 196, 0.705);
+    padding-bottom: 3vh;
+}
+
+.tokenDetails{
+    display: flex;
+    flex-direction: column;
+    gap: 3.5vh;
+    /* width: 30vw; */
+}
+
+.detailsToken{
+    padding-right: 2vw;
+}
+
+.detailsStatus{
+    padding-right: 4vw;
+}
+
+.detailsDomain{
+    padding-right: 3vw;
+}
+
+.backButton{
+    background-color: #bdbdf5;
+    width: 25vw;
+}
+
+
+.mutedText{
+    font-weight: 400;
 }
