--- a/src/Tokens.css
+++ b/src/Tokens.css
@@ -4,8 +4,18 @@
 }
 
 .selectedCardContainer{
+    padding-top: 5vh;
     width: 30vw;
     border-right: 1px solid rgba(128, 128, 128, 0.336);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.selectedCardContainer h1{
+    border-bottom: 1px solid rgba(211, 211, 211, 0.76);
+    padding-bottom: 1vh;
+    font-weight: 400;
 }
 
 .userTokenCard{
