--- a/src/Tokens.css
+++ b/src/Tokens.css
@@ -84,6 +84,10 @@
     border: 1px solid black;
 }
 
+.tokenTableContainer a{
+    text-decoration: none;
+}
+
 .tokenContainer td{
     border: 1px solid black;
     padding: 2vh;
