--- a/src/Tokens.css
+++ b/src/Tokens.css
@@ -1,5 +1,5 @@
 .tokensPageContainer{
-    min-height: 89vh;
+    /* min-height: 89vh; */
     display: flex;
 }
 
@@ -47,8 +47,7 @@
 
 .tokenContainer table{
     text-align: center;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    padding-bottom: 5vh;
     width: 60vw;
     border: 1px solid black;
 }
@@ -74,14 +73,32 @@
     width: 6vw;
 }
 
+.tokenTableContainer table{
+    width: 45vw;
+    /* height: 10vh; */
+}
+
 .tokenTableContainer{
+    overflow-y: auto;
+    max-height: 30vh;
+    border: 1px solid black;
+}
+
+.fetchingTokensContainer{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    gap: 1vw;
+}
+
+.fetchingTokensContainer h4{
+    font-weight: 300;
 }
 
 .tokenContainer th{
     border: 1px solid black;
+    background-color: #323741;
+    color: white;
 }
 
 .tokenTableContainer a{
