--- a/src/TokenDetails.css
+++ b/src/TokenDetails.css
@@ -13,15 +13,16 @@
     padding-bottom: 3vh;
 }
 
+.tokenCardContainer h1{
+    font-weight: 300;
+    padding-bottom: 3vh;
+    font-size: 3.5vh;
+}
+
 .tokenDetails{
     display: flex;
     flex-direction: column;
     gap: 3.5vh;
-    /* width: 30vw; */
-}
-
-.tokenDetailsContainer .tokenDetails button{
-    color: black;
 }
 
 .detailsToken{
@@ -36,12 +37,70 @@
     padding-right: 3vw;
 }
 
-.backButton{
+.actionButton{
     background-color: #bdbdf5;
+    border-radius: 10px;
     width: 25vw;
+    font-size: 2vh;
+}
+
+.actionButton:hover{
+    background-color: #8585fd;
+    color: white;
+}
+
+.tokenButtonsContainer{
+    display: flex;
+    flex-direction: column;
+    padding-top: 5vh;
+    gap: 3vh;
+}
+
+.tokenButtonsContainer .actionButton{
+    font-size: 1.8vh;
 }
 
 
 .mutedText{
     font-weight: 300;
+}
+
+.individualTokenContainer{
+    display: flex;
+    flex-direction: row;
+}
+
+.tokenCardContainer .userCard{
+    width: 25vw;
+    height: 30vh;
+}
+
+.tokenCardContainer h2{
+    padding-left: 1vw;
+    font-weight: 400;
+    padding-bottom: 2vh;
+}
+
+.tokenCardContainer .userCard h4{
+    font-weight: 300;
+}
+
+.tokenDetailsContainer{
+    width: 70vw;
+    display: flex;
+    align-items: center;
+}
+
+.tokenCardContainer{
+    width: 30vw;
+    padding: 3vh;
+    border-right: 1px solid rgba(196, 196, 196, 0.61);
+}
+
+.tokenDetailsContainer h1{
+    font-size: 3.5vh;
+}
+
+.tokenDetailsContainer h4{
+    font-size: 2.5vh;
 }
