--- a/src/Tokens.css
+++ b/src/Tokens.css
@@ -49,7 +49,6 @@
     text-align: center;
     padding-bottom: 5vh;
     width: 60vw;
-    border: 1px solid black;
 }
 
 .noTokensContainer{
@@ -74,14 +73,30 @@
 }
 
 .tokenTableContainer table{
-    width: 45vw;
-    /* height: 10vh; */
+    width: 60vw;
+}
+
+.tokenTableContainer table h3{
+    font-size: 2.5vh;
 }
 
 .tokenTableContainer{
     overflow-y: auto;
     max-height: 30vh;
-    border: 1px solid black;
+    border: 1px solid rgba(224, 224, 224, 0.719);
+}
+
+.tokenTableContainer table button{
+    background-color: #d3d3fa;
+    border-radius: 20px;
+}
+
+.tokenTableContainer .statusColumn{
+    width:10vw;
+}
+
+.tokenTableContainer .actionColumn{
+    width:15vw;
 }
 
 .fetchingTokensContainer{
@@ -96,7 +111,7 @@
 }
 
 .tokenContainer th{
-    border: 1px solid black;
+    border: 1px solid rgb(202, 202, 202);
     background-color: #323741;
     color: white;
 }
@@ -106,7 +121,7 @@
 }
 
 .tokenContainer td{
-    border: 1px solid black;
+    border: 1px solid rgb(202, 202, 202);
     padding: 2vh;
     font-size: 1.8vh;
 }
